# seedbox

./: .gitignore  Cargo.toml  README.md  seedbox.toml
src/: config.rs  gh_decoder.rs  lib.rs  main.rs  pipeline.rs  tests.rs
src/pipeline/: csproj_parser.rs
