[package]
name = "seedbox"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
json5 = "0.4.1"
reqwest = "0.12.15"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
toml = "0.8.22"
tracing = { version = "0.1.41", features = ["max_level_debug", "release_max_level_info", "release_max_level_off"] }
tracing-subscriber = "0.3.19"
